# frivol

./: .gitignore  README.md
doc/doxygen/: README.md  doxygen.conf  generate.sh
doc/tiralabra/: README.md  esim.ggb  generate.sh  kayttoohje.tex  maarittelydokumentti.tex  testausdokumentti.tex  toteutusdokumentti.tex  viikkoraportti1.tex  viikkoraportti2.tex  viikkoraportti3.tex  viikkoraportti4.tex
frivol/: README.md  array.hpp  array_impl.hpp  beach_line.hpp  beach_line_impl.hpp  common.hpp  fortune.hpp  fortune_impl.hpp  frivol.hpp  frivol_impl.hpp  geometry_traits.hpp  geometry_traits_impl.hpp  point.hpp  policy.hpp  priority_queue_concept.hpp  priority_queue_concept_impl.hpp  search_tree_concept.hpp  stack.hpp  stack_impl.hpp  voronoi_diagram.hpp  voronoi_diagram_impl.hpp
frivol/containers/: array.hpp  array_impl.hpp  dynamic_array.hpp  dynamic_array_impl.hpp  priority_queue_concept.hpp  search_tree_concept.hpp  stack.hpp  stack_impl.hpp
frivol/containers/priority_queues/: binary_heap.hpp  binary_heap_impl.hpp  (+2 more)
frivol/fortune/: algorithm.hpp  algorithm_impl.hpp  beach_line.hpp  beach_line_impl.hpp  fortune.hpp  fortune_impl.hpp
frivoldraw/: README.md  compile.sh  frivoldraw.html  frivoldraw.js  frivoldraw_lib.cpp
frivoldraw/include/: README.md
perftest/: CMakeLists.txt  README.md  perftest.cpp
test/: CMakeLists.txt  README.md  array.cpp  fortune_algorithm.cpp  frivol.cpp  geometry_traits_float.cpp  priority_queue.cpp  search_tree.cpp  stack.cpp  test.cpp  voronoi_diagram.cpp
test/containers/: array.cpp  avl_node.cpp  dynamic_array.cpp  priority_queue.cpp  search_tree.cpp
test/fortune/: beach_line.cpp  fortune_algorithm.cpp
(+5 files in other folders)
